# omnisaver

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
apps/bot/src/omnisaver_bot/: __init__.py  __main__.py  main.py  messages.py  public_flow.py  runtime.py  session_commands.py
apps/web/src/omnisaver_web/: __init__.py  __main__.py  main.py  session_portal.py
config/src/omnisaver_config/: __init__.py  settings.py
deploy/docker/: Caddyfile.example  Dockerfile.bot  Dockerfile.web  Dockerfile.worker  docker-compose.host-caddy.yml  docker-compose.local.yml  docker-compose.production.example.yml  nginx.example.conf
deploy/scripts/: admin.sh  backup_postgres.sh  healthcheck.sh  metrics.sh  migrate.sh  restore_postgres.sh
docs/architecture/: ENGINE_SELECTION.md  SYSTEM_DESIGN.md
docs/engineering/: CODEX_TASKS.md  DEFINITION_OF_DONE.md  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_ROADMAP.md  TESTING_STRATEGY.md
docs/operations/: PRODUCTION_DEPLOYMENT.md  RUNBOOK.md
docs/product/: PRODUCT_REQUIREMENTS.md  UX_UPGRADE_PLAN.md
docs/security/: PRIVACY_POLICY_DRAFT.md  SECURITY_MODEL.md
docs/specs/: API_SPEC.md  COMMAND_SPEC.md  DATABASE_SPEC.md  FUNCTIONAL_SPEC.md
tests/: test_bot_public_flow.py  test_bot_runtime.py  test_download_repository.py  test_downloader_manager.py  test_e2e_services.py  test_media_processor.py  test_production_deploy.py  test_public_download_job.py  test_queue.py  test_runtime_integration.py  test_session_commands.py  test_session_portal.py  test_session_repository.py  test_session_resolver.py  test_session_vault.py  test_settings.py  test_url_detection.py  test_worker_runtime.py  test_worker_service.py
workers/downloader/src/omnisaver_worker/: __init__.py  __main__.py  job_queue.py  main.py  notifications.py  public_job.py  service.py  session_resolver.py  telegram_sender.py
