[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "omnisaver"
version = "0.1.0"
description = "Telegram media downloader platform foundation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Hiep Mai", email = "hiepknor@gmail.com" }]
dependencies = [
    "psycopg[binary]>=3.2,<4",
    "redis==5.2.1",
]

[project.optional-dependencies]
dev = [
    "mypy==1.14.1",
    "pytest==8.3.4",
    "ruff==0.9.2",
]

[tool.setuptools.packages.find]
where = [
    "config/src",
    "apps/bot/src",
    "apps/web/src",
    "workers/downloader/src",
    "packages/downloader/src",
    "packages/session-vault/src",
    "packages/db/src",
    "packages/media-processor/src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "config/src",
    "apps/bot/src",
    "apps/web/src",
    "workers/downloader/src",
    "packages/downloader/src",
    "packages/session-vault/src",
    "packages/db/src",
    "packages/media-processor/src",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = [
    "omnisaver_bot",
    "omnisaver_config",
    "omnisaver_db",
    "omnisaver_downloader",
    "omnisaver_media_processor",
    "omnisaver_session_vault",
    "omnisaver_web",
    "omnisaver_worker",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = [
    "config/src",
    "apps/bot/src",
    "apps/web/src",
    "workers/downloader/src",
    "packages/downloader/src",
    "packages/session-vault/src",
    "packages/db/src",
    "packages/media-processor/src",
]
files = [
    "config/src",
    "apps/bot/src",
    "apps/web/src",
    "workers/downloader/src",
    "packages/downloader/src",
    "packages/session-vault/src",
    "packages/db/src",
    "packages/media-processor/src",
    "tests",
]
